# bits-hack-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  data.json  data_processed.json  langgraph.json  nested_fields.json  proto.ipynb  pyproject.toml  supabase_upsert.ipynb
chroma.db/bd38c671-7aea-4d8d-800d-ad6e3f782b10/: index_metadata.pickle
src/research/: graph.py  nodes.py  state.py  tools.py  utils.py
