[project]
name = "myagent"
version = "0.1.0"
description = ""
authors = [
    {name = "sidhant-sriv",email = "sidhant.sriv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.3.18,<0.4.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "langchain-groq (>=0.3.1,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-cohere (>=0.4.3,<0.5.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "supabase (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
